--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -38,32 +38,31 @@
 
   .apple-form {
     text-align: left;
+  }
 
-    .form-control {
-      width: 100%;
-      margin-bottom: 15px;
-      padding: 10px;
-      border: none;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
+  .apple-form .form-control {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 10px;
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
 
-    .form-actions {
-      text-align: center;
-      margin-top: 20px;
-    }
+  .apple-form .form-actions {
+    text-align: center;
+    margin-top: 20px;
+  }
 
-    .btn-11 {
-      @import 'application';
-      display: block;
-      margin: 0 auto 20px;
-    }
+  .apple-form .btn-11 {
+    display: block;
+    margin: 0 auto 20px;
+  }
 
-    .login-link {
-      margin-top: 15px;
-      font-size: 14px;
-    }
+  .apple-form .login-link {
+    margin-top: 15px;
+    font-size: 14px;
   }
 </style>
 
