--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap">
-
-<%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
-
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
   <title>MatchMate</title>
 
-  <%= javascript_importmap_tags %>
-  <%= favicon_link_tag asset_path('logo.png') %>
+  <!-- Stylesheets -->
+  <%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+  <!-- JavaScript -->
+  <%= javascript_importmap_tags %>
+
+  <!-- Favicon -->
+  <%= favicon_link_tag asset_path('logo.png') %>
 </head>
 <body id='body'>
   <%= render "shared/navbar" %>
@@ -30,7 +32,5 @@
 
   <!-- Include Flatpickr script -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
-
 </body>
 </html>
