--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-
+   <script src="https://cdn.api-futebol.com.br/widgets/v1/apifutebol-tabela.js"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 
