--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,32 +25,35 @@
         <h2 class="today-matches-text">Today's Matches</h2>
       </section>
 
+   <div class="container" style="display: grid; grid-template-columns: 1fr 3fr;">
+    <!-- Widget Section -->
+    <div class="apifutebol-tabela" data-client-id="WXSWC996ZX43"></div>
+
     <!-- Cards Section -->
     <section class="p-5">
-      <div class="container">
-        <div class="row text-center">
-          <% @games.first(5).each do |game| %>
-            <div class="col-md-4 mb-4">
-              <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
-                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                  <p><%= "#{game.home_team.name} vs #{game.away_team.name}" %></p>
-                  <p><%= "#{game.city}, #{game.date}" %></p>
-                  <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow" %></p>
+        <div class="container">
+            <div class="row text-center">
+                <% @games.first(5).each do |game| %>
+                    <div class="col-md-4 mb-4">
+                        <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                                <p><%= "#{game.home_team.name} vs #{game.away_team.name}" %></p>
+                                <p><%= "#{game.city}, #{game.date}" %></p>
+                                <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow" %></p>
+                            </div>
+                        </div>
+                    </div>
+                <% end %>
+                <div class="col-md-4 mb-4">
+                    <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                            <h5>Checkout all available matches.</h5>
+                            <br>
+                            <p><%= link_to "Explore", games_path, class: "btn btn-g3", style: "color: F2F3F4;" %></p>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          <% end %>
-          <div class="col-md-4 mb-4">
-            <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
-              <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                <h5>Checkout all available matches.</h5>
-                <br>
-                <p><%= link_to "Explore", games_path, class: "btn btn-g3", style: "color: F2F3F4;" %></p>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </section>
-  </div>
 </div>
