--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
   <%= render "shared/navbar" %>
   <%= render "shared/flashes" %>
 
+
   <%= yield %>
 
   <!-- Include jQuery and Bootstrap scripts -->
@@ -39,4 +40,5 @@
   <!-- Include Flatpickr script -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </body>
+<%= render "shared/footer" %>
 </html>
