styling complete on index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,10 +22,10 @@ body, h1, .container, .d-sm-flex {
 @import "pages/index";
 @import 'components/user_profile';
 
-#body{
-  background-color:#000;
+// #body{
+//   background-color:#000;
 
-}
+// }
 
 .btn-11 {
   display: flex;
