--- a/app/assets/stylesheets/pages/_games_index.scss
+++ b/app/assets/stylesheets/pages/_games_index.scss
@@ -1,5 +1,18 @@
-.emblem-image {
-  width: 60px; // Set the maximum width as needed
-  height: auto;    // Maintain aspect ratio
+.emblem-image-home {
+  width: 60px;
+  height: auto;
 
 }
+
+.emblem-image-away {
+  width: 60px;
+  height: auto;
+
+
+}
+
+// .index-page-game-link {
+
+//   bottom: 5px;
+
+// }
