--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -13,8 +13,8 @@
     <% end %>
 
     <div class="fix-button-position">
-      <div class="form-control back-btn-group-form">
-      <%= link_to "Back", :back %>
+      <div>
+      <%= link_to "Back", :back, class: "back-btn-group-form"%>
       </div>
     </div>
   </div>
