--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,6 +4,10 @@
   <strong>Game:</strong>
   <%= @group.game.home_team.name %> vs <%= @group.game.away_team.name %>
 </p>
+<p>
+  <strong>Description:</strong>
+  <%= @group.description %>
+</p>
 
 
 <h2>Members:</h2>
