--- a/app/assets/stylesheets/pages/_groups_new.scss
+++ b/app/assets/stylesheets/pages/_groups_new.scss
@@ -1,8 +1,8 @@
 body {
   background-image: url('https://images.unsplash.com/photo-1459865264687-595d652de67e?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
-  // background-position: center;
-  // background-repeat: no-repeat;
+  background-position: center;
+  background-repeat: no-repeat;
   height: 100%;
   margin: 0;
 }
@@ -77,9 +77,6 @@ body {
   margin: 12px;
 }
 
-// #create-group {
-//   display: flex;
-// }
 
 .fix-button-position {
   display: flex;
@@ -99,4 +96,14 @@ body {
   transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out;
   width: auto;
   margin-bottom: 20px;
+
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  box-sizing: border-box;
 }
