--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,16 +1,27 @@
-<h1><%= "#{@game.home_team.name} vs #{@game.away_team.name}" %></h1>
+<div class="container">
+  <div class="d-flex">
+    <div class="col-6">
+      <h1><%= "#{@game.home_team.name} vs #{@game.away_team.name}" %></h1>
 
-<p><%= "City: #{@game.city}" %></p>
-<p><%= "Date: #{@game.date}" %></p>
+      <p><%= "City: #{@game.city}" %></p>
+      <p><%= "Date: #{@game.date}" %></p>
+    </div>
+    <div class="col-6">
+      <h2>Groups:</h2>
+      <ul>
+        <% @game.groups.each do |group| %>
+          <li>
+            <%= link_to group.name, game_group_path(@game, group) %> - <%= group.users.count %> users
+          </li>
+        <% end %>
+      </ul>
 
-<h2>Groups:</h2>
-<ul>
-  <% @game.groups.each do |group| %>
-    <li>
-      <%= link_to group.name, game_group_path(@game, group) %> - <%= group.users.count %> users
-    </li>
-  <% end %>
-</ul>
+      <%= link_to 'Create a Group', new_game_group_path(@game) %>
+    </div>
+  </div>
+  <div class="justify-content-center align-items-center text-center">
+    <%= link_to "Back to Index", games_path %>
+  </div>
 
-<%= link_to 'Create a Group', new_game_group_path(@game) %>
-<%= link_to "Back to Index", games_path %>
+
+</div>
