--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,65 +1,117 @@
 <style>
-.widget-card {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    background-color: rgba(242, 243, 244, 0.1);
-    border-radius: 15px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: #fff;
+}
+.container-style {
+  margin-top: 0;
+}
+
+.today-matches-text {
+  font-size: 2rem;
+  text-align: center;
+  background-color: #F2F3F4;
+  padding-top: 20px;
+  text-shadow: none;
+  padding-bottom: -20px;
+  margin-bottom: -20px;
+}
+
+.widget-container {
+  background-color: #fff;
+  border-radius: 15px;
+  width: 100%;
+  height: 270px;
+  box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+  margin-bottom: 20px;
+}
+
+.apifutebol-tabela {
+  height: 300px;
+}
+
+.widget-embed-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #F2F3F4;
 }
 </style>
 
-<section class="text-light text-center" style="background: linear-gradient(to right, #012B4D, #001626); display: flex; flex-direction: column; align-items: center; justify-content: center; overflow: hidden;">
-    <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; position: relative; max-width: 1200px; overflow: hidden; margin-top: -15px;">
-        <div class="txt" style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: flex-start; padding: 20px; position: relative; z-index: 1;">
-            <h2 class="mb-3" style="font-weight: bold; text-align: left;">
-                Dive into Brazil’s fan scene with
-                <span style="color: #ffc107; font-family: 'Black Ops One', cursive; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">
-                    Match Mate
-                </span>
-            </h2>
-
-            <p class="small my-4" style="font-weight: 200; text-align: left;">
-                Chat, make friends, and plan match days together. Local fans can help you score tickets with tips and sharing the best deals. Sign up and jump into the action! 🇧🇷
-            </p>
-            <div class="d-flex align-items-center justify-content-center mb-3 text-center" style="width: 100%;">
-                <a href="<%= new_user_registration_path %>" class="btn btn-11">Sign up</a>
-            </div>
-        </div>
-        <div class="d-flex align-items-start justify-content-start overflow-hidden" style="flex: 1; position: relative; margin-top: 5px; margin-bottom: 5px; height: calc(100% - 10px);">
-            <img class="img-fluid rounded" src="https://i.imgur.com/cHGosIr.png" alt="Football supporters" style="width: auto; height: 100%; object-fit: contain; margin: 0; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);">
-        </div>
+<section class="text-light text-center container-style" style="background: linear-gradient(to right, #012B4D, #001626); display: flex; flex-direction: column; align-items: center; justify-content: center; overflow: hidden;">
+  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; position: relative; max-width: 1200px; overflow: hidden; margin-top: -15px;">
+    <div class="txt" style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: flex-start; padding: 20px; position: relative; z-index: 1;">
+      <h2 class="mb-3" style="font-weight: bold; text-align: left;">
+        Dive into Brazil’s fan scene with
+        <span style="color: #ffc107; font-family: 'Black Ops One', cursive; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">
+          Match Mate
+        </span>
+      </h2>
+      <p class="small my-4" style="font-weight: 200; text-align: left;">
+        Chat, make friends, and plan match days together. Local fans can help you score tickets with tips and sharing the best deals. Sign up and jump into the action! 🇧🇷
+      </p>
+      <div class="d-flex align-items-center justify-content-center mb-3 text-center" style="width: 100%;">
+        <a href="<%= new_user_registration_path %>" class="btn btn-11">Sign up</a>
+      </div>
     </div>
+    <div class="d-flex align-items-start justify-content-start overflow-hidden" style="flex: 1; position: relative; margin-top: 5px; margin-bottom: 5px; height: calc(100% - 10px);">
+      <img class="img-fluid rounded" src="https://i.imgur.com/cHGosIr.png" alt="Football supporters" style="width: auto; height: 100%; object-fit: contain; margin: 0; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);">
+    </div>
+  </div>
 </section>
 
-      <section class="today-matches-section mb-4">
-        <h2 class="today-matches-text">Today's Matches</h2>
-      </section>
-
-   <div class="container widget-card">
-    <div class="apifutebol-tabela" data-client-id="WXSWC996ZX43"></div>
-    <section class="p-5">
+<div class="flex-container">
+  <h2 class="today-matches-text">Today's Matches</h2>
+  <div class="cards-container">
+    <section class="text-light text-center container-style">
+      <section class="p-5" style="padding-left: 0;">
         <div class="container">
-            <div class="row text-center">
-                <% @games.first(5).each do |game| %>
-                    <div class="col-md-4 mb-4">
-                        <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                <p><%= "#{game.home_team.name} vs #{game.away_team.name}" %></p>
-                                <p><%= "#{game.city}, #{game.date}" %></p>
-                                <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow" %></p>
-                            </div>
-                        </div>
-                    </div>
-                <% end %>
-                <div class="col-md-4 mb-4">
-                    <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
-                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                            <h5>Checkout all available matches.</h5>
-                            <br>
-                            <p><%= link_to "Explore", games_path, class: "btn btn-g3", style: "color: F2F3F4;" %></p>
-                        </div>
-                    </div>
+          <div class="row text-center">
+            <% @games.first(5).each do |game| %>
+              <div class="col-md-4 mb-4">
+                <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: auto; width: 100%;">
+                  <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <p><%= "#{game.home_team.name} vs #{game.away_team.name}" %></p>
+                    <p><%= "#{game.city}, #{game.date}" %></p>
+                    <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow" %></p>
+                  </div>
                 </div>
-            </div>
+              </div>
+            <% end %>
+          </div>
         </div>
+      </section>
     </section>
+  </div>
 </div>
+
+<div class="widget-embed-container">
+  <div class="widget-container">
+    <div class="apifutebol-tabela" data-client-id="WXSWC996ZX43"></div>
+  </div>
+
+  <div class="embedsocial-hashtag" data-ref="b17194e1fd2ccec500ac2d6701e403f7081d21af"></div>
+</div>
+
+<script>
+  (function(d, s, id) {
+    var js;
+    if (d.getElementById(id)) {
+      return;
+    }
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "https://embedsocial.com/cdn/ht.js";
+    d.getElementsByTagName("head")[0].appendChild(js);
+  }(document, "script", "EmbedSocialHashtagScript"));
+</script>
