--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 90px; /* Adjust this value to make the bar thinner */
+  height: 90px;
 }
 
 .footer-info {
@@ -20,12 +20,12 @@
   justify-content: center;
   gap: 10px;
   margin-top: 15px;
-  font-size: 0.8em; /* Adjust this value to make the text smaller */
+  font-size: 0.8em;
 }
 
 .footer-copyright {
   text-align: center;
-  font-size: 0.8em; /* Adjust this value to make the text smaller */
+  font-size: 0.8em;
 }
 </style>
 
