--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,7 @@
     background-position: center;
     background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
-    height: 100vh;
+    height: 100%;
   }
 
   .form-container {
