--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #fff;
+  background: #F2F3F4;;
 }
 .container-style {
   margin-top: 0;
@@ -14,7 +14,6 @@ body {
 .today-matches-text {
   font-size: 2rem;
   text-align: center;
-  background-color: #F2F3F4;
   padding-top: 20px;
   text-shadow: none;
   padding-bottom: -20px;
@@ -24,10 +23,10 @@ body {
 .widget-container {
   background-color: #fff;
   border-radius: 15px;
-  width: 100%;
+  width: calc(100% - 60px);
   height: 270px;
   box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
-  margin-bottom: 20px;
+  margin: 0px 0px 20px 30px;
 }
 
 .apifutebol-tabela {
@@ -55,10 +54,31 @@ body {
 .btn-six:hover {
   color: #012B4D;
   background-color: #ffc107;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.card-five {
+  background-color: #FFFFFF;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.btn-hover:hover {
+  transform: scale(1.1);
+}
+
+#mySection {
+  padding-top: 20px;
+  padding-bottom: 5px;
+}
+
+#carousel {
+  box-shadow: 0 5px 10px 0 rgba(1, 43, 77, 0.2), 0 6px 20px 0 rgba(1, 43, 77, 0.4);
+}
+
 </style>
 
-<section class="text-light text-center container-style" style="background: linear-gradient(to right, #012B4D, #001626); display: flex; flex-direction: column; align-items: center; justify-content: center; overflow: hidden;">
+<section id="mySection" class="text-light text-center container-style" style="background: linear-gradient(to right, #012B4D, #001626); display: flex; flex-direction: column; align-items: center; justify-content: center; overflow: hidden;">
   <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; position: relative; max-width: 1200px; overflow: hidden; margin-top: -15px;">
     <div class="txt" style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: flex-start; padding: 20px; position: relative; z-index: 1;">
       <h2 class="mb-3" style="font-weight: bold; text-align: left;">
@@ -74,9 +94,10 @@ body {
         <a href="<%= new_user_registration_path %>" class="btn btn-11">Sign up</a>
       </div>
     </div>
-    <div class="d-flex align-items-start justify-content-start overflow-hidden" style="flex: 1; position: relative; margin-top: 5px; margin-bottom: 5px; height: calc(100% - 10px);">
-      <img class="img-fluid rounded" src="https://i.imgur.com/cHGosIr.png" alt="Football supporters" style="width: auto; height: 100%; object-fit: contain; margin: 0; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);">
-    </div>
+<div id="carousel" class="carousel" style="width: 500px; height: 300px; overflow: hidden; border-radius: 25px; position: relative;">
+    <img id="carouselImage" src="" alt="Carousel Image" style="width:100%; height: 100%; object-fit: cover;">
+    <div id="dots" style="position: absolute; bottom: 10px; width: 100%; text-align: center;"></div>
+</div>
   </div>
 </section>
 
@@ -89,11 +110,11 @@ body {
           <div class="row text-center">
             <% @games.first(5).each do |game| %>
               <div class="col-md-4 mb-4">
-                <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: auto; width: 100%;">
+                <div class="card bg-newwhite text-primary shadow card-five" style="border-radius: 15px; height: auto; width: 100%;">
                   <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <p><%= "#{game.home_team.name} vs #{game.away_team.name}" %></p>
                     <p><%= "#{game.city}, #{game.date}" %></p>
-                    <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow" %></p>
+                    <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow btn-hover" %></p>
                   </div>
                 </div>
               </div>
@@ -133,4 +154,37 @@ body {
     js.src = "https://embedsocial.com/cdn/ht.js";
     d.getElementsByTagName("head")[0].appendChild(js);
   }(document, "script", "EmbedSocialHashtagScript"));
+
+    let images = [
+        'https://img.freepik.com/fotos-gratis/retrato-de-fa-de-jogo-de-futebol-aproveitando-a-partida_23-2150860703.jpg',
+        'https://img.freepik.com/fotos-gratis/vista-do-torcedor-de-futebol-em-extase-com-rosto-pintado-curtindo-a-partida_23-2150885915.jpg',
+        'https://img.freepik.com/fotos-gratis/vista-do-fa-de-futebol-curtindo-a-partida_23-2150860785.jpg',
+        'https://img.freepik.com/fotos-gratis/retrato-de-fas-de-jogos-de-futebol-curtindo-a-partida_23-2150885831.jpg',
+        'https://img.freepik.com/fotos-gratis/vista-do-fa-de-futebol-curtindo-a-partida_23-2150860633.jpg',
+        'https://img.freepik.com/fotos-gratis/jogador-de-futebol-comemorando-a-vitoria_23-2150821520.jpg'
+    ];
+    let i = 0;
+
+    function createDots() {
+        let dots = document.getElementById('dots');
+        dots.innerHTML = '';
+        for (let j = 0; j < images.length; j++) {
+            let dot = document.createElement('span');
+            dot.style = 'display: inline-block; width: 10px; height: 10px; margin: 0 5px; background: ' + (j === i ? 'white' : 'rgba(255, 255, 255, 0.5)') + '; border-radius: 50%; cursor: pointer;';
+            dot.onclick = function() {
+                i = j;
+                changeImage();
+            };
+            dots.appendChild(dot);
+        }
+    }
+
+    function changeImage() {
+        document.getElementById('carouselImage').src = images[i];
+        createDots();
+        i = (i + 1) % images.length;
+    }
+
+    setInterval(changeImage, 7000);
+    changeImage();
 </script>
