--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,32 +1,32 @@
 <style>
-.navbar {
-  background: linear-gradient(to left, #012B4D, #001626);
-  margin-bottom: 0;
-}
+  .navbar {
+    background: linear-gradient(to left, #012B4D, #001626);
+    margin-bottom: 0;
+  }
 
-.navbar-title {
-  margin-left: 10px;
-  color: #F2F3F4;
-  font-family: 'Black Ops One', cursive;
-  font-size: 30px;
-  text-decoration: none;
-}
+  .navbar-title {
+    margin-left: 10px;
+    color: #F2F3F4;
+    font-family: 'Black Ops One', cursive;
+    font-size: 30px;
+    text-decoration: none;
+  }
 
-.navbar-title:hover {
-  text-decoration: none;
-}
+  .navbar-title:hover {
+    text-decoration: none;
+  }
 
-.navbar-toggler {
-  background-color: #F2F3F4;
-}
+  .navbar-toggler {
+    background-color: #F2F3F4;
+  }
 
-.navbar-toggler-icon {
-  border-color: #012B4D;
-}
+  .navbar-toggler-icon {
+    border-color: #012B4D;
+  }
 
-.profile-picture {
-  cursor: pointer;
-}
+  .profile-picture {
+    cursor: pointer;
+  }
 </style>
 
 <nav class="navbar navbar-expand-md">
@@ -42,7 +42,7 @@
       <span class="navbar-toggler-icon custom-toggler"></span>
     </button>
 
-    <div class="collapse navbar-collapse justify-content-end flex-column align-items-end" id="navmenu">
+    <div class="collapse navbar-collapse justify-content-end" id="navmenu">
       <ul class="navbar-nav ms-auto align-items-center">
         <li class="nav-item">
           <%= link_to 'Home', root_path, class: "nav-link #{'active' if current_page?(root_path)}", id: 'home-link' %>
