--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -130,7 +130,7 @@
 
 <div class="card-container">
   <div class="card">
-    <h2 class="form-title">Edit <%= resource_name.to_s.humanize %></h2>
+    <h2 class="form-title">Edit Profile</h2>
     <br>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), method: :put, html: { class: 'apple-form' }) do |f| %>
