--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,3 @@
-
 <style>
   .navbar {
     background: linear-gradient(to left, #012B4D, #001626);
@@ -25,10 +24,33 @@
     border-color: #012B4D;
   }
 
-  .profile-picture {
-    cursor: pointer;
-  }
+.profile-picture a {
+  position: relative;
+  z-index: 3;
+}
+.profile-picture {
+  cursor: pointer;
+  position: relative;
+  z-index: 3;
+}
+
+.profile-circle {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  clip-path: circle(50% at 50% 50%);
+  border-radius: 50%;
+  background: linear-gradient(to bottom right, #004080 0%, rgb(17, 107, 123) 50%, #ffc107 80%, rgb(0, 153, 51) 100%);
+  clip-path: circle();
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
 </style>
+
 <nav class="navbar navbar-expand-md">
   <div class="container d-lg-flex align-items-center">
     <div class="logo">
@@ -65,19 +87,18 @@
 
         <% if user_signed_in? %>
           <li class="nav-item">
-            <% if current_user.photo.attached? %>
-              <%= link_to profile_path do %>
-                <div class="profile-picture me-2 d-md-block">
-                  <%= cl_image_tag(current_user.photo.key, height: 30, width: 30, crop: :fill, class: 'rounded-circle') %>
-                </div>
+            <div class="profile-picture me-2 d-md-block">
+              <% if current_user.photo.attached? %>
+                <%= link_to profile_path do %>
+                  <%= cl_image_tag(current_user.photo.key, width: '35', height: '35', crop: :fill, class: 'rounded-circle profile-image') %>
+                <% end %>
+              <% else %>
+                <%= link_to profile_path do %>
+                  <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle profile-image', width: '35', height: '35' %>
+                <% end %>
               <% end %>
-            <% else %>
-              <%= link_to profile_path do %>
-                <div class="profile-picture me-2 d-md-block">
-                  <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
-                </div>
-              <% end %>
-            <% end %>
+              <div class="profile-circle"></div>
+            </div>
           </li>
         <% end %>
       </ul>
