--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -72,7 +72,7 @@
  <div class="row">
     <% @games.each do |game| %>
       <div class="col-sm-4">
-        <div class="card bg-newwhite text-primary border-primary shadow m-3" style="border-radius: 15px; height: auto; width: 100%;">
+        <div class="card bg-newwhite text-primary border-none shadow m-3" style="border-radius: 15px; height: auto; width: 100%;">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
           <div class="container">
             <div class="row">
