--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,17 +24,25 @@
     border-color: #012B4D;
   }
 
-.profile-picture a {
+.nav-profile-picture a {
   position: relative;
   z-index: 3;
 }
-.profile-picture {
+.nav-profile-picture {
   cursor: pointer;
   position: relative;
   z-index: 3;
 }
 
-.profile-circle {
+.nav-profile-image {
+  width: 35px; /* Set a fixed width for the image */
+  height: 35px; /* Set a fixed height for the image */
+  border-radius: 50%;
+  object-fit: cover;
+  z-index: 2; /* On top of the circle */
+}
+
+.nav-profile-circle {
   position: absolute;
   width: 40px;
   height: 40px;
@@ -87,17 +95,17 @@
 
         <% if user_signed_in? %>
           <li class="nav-item">
-            <div class="profile-picture me-2 d-md-block">
-              <% if current_user.photo.attached? %>
-                <%= link_to profile_path do %>
-                  <%= cl_image_tag(current_user.photo.key, width: '35', height: '35', crop: :fill, class: 'rounded-circle profile-image') %>
-                <% end %>
-              <% else %>
-                <%= link_to profile_path do %>
-                  <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle profile-image', width: '35', height: '35' %>
-                <% end %>
-              <% end %>
-              <div class="profile-circle"></div>
+            <div class="nav-profile-picture me-2 d-md-block">
+       <% if current_user.photo.attached? %>
+  <%= link_to profile_path do %>
+    <%= cl_image_tag(current_user.photo.key, width: '35', height: '35', crop: :fill, class: 'rounded-circle nav-profile-image') %>
+  <% end %>
+<% else %>
+  <%= link_to profile_path do %>
+    <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle nav-profile-image', width: '35', height: '35' %>
+  <% end %>
+<% end %>
+              <div class="nav-profile-circle"></div>
             </div>
           </li>
         <% end %>
