--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,4 +1,28 @@
+<!--
 <%= simple_form_for [@game, @group] do |f| %>
   <%= f.input :name %>
   <%= f.button :submit %>
 <% end %>
+-->
+
+<div class="main-container-group-form">
+  <div class="card-container-group-form">
+    <div class="new-group-form">
+      <h2 id="new-group">Edit Group</h2>
+    </div>
+
+    <%= simple_form_for [@game, @group] do |f| %>
+      <%= f.input :name %>
+      <%= f.input :description, as: :text, input_html: { rows: 5 } %>
+      <div class="form-actions-group-form">
+        <%= f.button :submit, class: "btn-12-group-form"%>
+      </div>
+    <% end %>
+
+    <div class="fix-button-position">
+      <div>
+      <%= link_to "Back", :back, class: "back-btn-group-form"%>
+      </div>
+    </div>
+  </div>
+</div>
