--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -20,51 +20,97 @@
           %>
           <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
         <% end %>
+      </div>
 
-        <style>
-          .team-card {
-            width: 10rem;
-            height: 10rem;
-            border: none;
-            border-radius: 50%;
-            box-shadow: none;
-            transition: transform 0.3s;
-          }
-          .team-card:hover {
-            transform: scale(1.05);
-          }
-          .team-card img {
-            object-fit: contain;
-            width: 100%;
-            height: 100%;
-          }
-          .row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-          }
-          .col-md-3 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 10rem; /* Add a margin to the bottom of each team card */
-          }
-        </style>
+      <style>
+        .team-card {
+          width: 14rem;
+          height: 18rem;
+          border: none;
+          border-radius: 15px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19);
+          transition: transform 0.3s;
+          overflow: hidden;
+        }
 
-        <div class="container mt-5">
-          <div class="row">
-            <% @teams.each do |team| %>
-              <div class="col-md-3">
-                <div class="card mb-4 team-card">
+        .team-card:hover {
+          transform: scale(1.05);
+        }
+
+        .team-logo-container {
+          width: 66.666%;
+          height: 70%;
+          margin: 1rem auto;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+        }
+
+        .team-logo-container img {
+          object-fit: contain;
+          width: 100%;
+          height: 100%;
+          border-radius: 15px;
+          max-width: calc(100% - 34px);
+          max-height: calc(100% - 34px);
+          margin-left: 15px;
+        }
+
+        .team-card-info {
+          padding: 10px;
+          text-align: center;
+        }
+
+        .row {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-around;
+        }
+
+        .col-md-3 {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-bottom: 2rem;
+        }
+
+        .team-name {
+          font-weight: bold;
+          margin-top: 10px;
+        }
+
+        .team-card:hover {
+  transform: scale(1.05);
+}
+
+.team-card:hover .team-logo-container img {
+  transform: scale(1.2);
+}
+
+      </style>
+
+      <div class="container mt-5">
+        <div class="row">
+          <% @teams.each do |team| %>
+            <div class="col-md-3">
+              <div class="card mb-4 team-card">
+                <div class="team-logo-container">
                   <%= link_to team_path(team) do %>
-                    <img class="card-img-top" src="<%= team.emblem %>" alt="<%= team.name %>">
+                    <img src="<%= team.emblem %>" alt="<%= team.name %>">
                   <% end %>
-                  <div class="card-body">
-                    <h5 class="card-title"><%= team.name %></h5>
-                    <p class="card-text">City: <%= team.city %></p>
-                  </div>
+                </div>
+                <div class="card-body team-card-info">
+                  <h5 class="team-name"><%= team.name %></h5>
+                  <p class="card-text">City: <%= team.city %></p>
                 </div>
               </div>
-            <% end %>
-          </div>
+            </div>
+          <% end %>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<%= link_to raw('<i class="fa fa-arrow-left text-warning" style="font-size: 2em; margin: 10px; text-shadow: 1px 1px 2px #888888;"></i>'), :back %>
