--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -50,7 +50,7 @@
       <%= form.label 'query', 'Location (City):', class: 'sr-only' %>
       <%= form.text_field :query,
         class: "form-control",
-        placeholder: "Type your desired location (City)"
+        placeholder: "Type a city name"
       %>
     </div>
 
