--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,113 +1,140 @@
-<div style="padding: 20px;">
-  <h1 style="font-family: 'Black Ops One'; color: dark; padding: 20px;">Teams</h1>
-</div>
 
 <section class="text-newwhite pt-3 pb-1 section">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-12 d-flex align-items-center justify-content-center mb-3">
-        <h3 class="mob-md-0" style="margin-bottom: 0; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">
-          Find a Team
-        </h3>
-      </div>
+
 
       <div class="col-md-12 text-center mb-3" style="padding-left: 10px;">
-        <%= form_with url: teams_path, method: :get, class: "d-flex" do %>
+        <%= form_with url: teams_path, method: :get, class: "d-flex align-items-center justify-content-center" do %>
+          <span class="mob-md-0" style="margin-bottom: 0; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">Find a Team</span>
           <%= text_field_tag :query,
             params[:query],
             class: "form-control",
-            placeholder: "Type your desired team name"
+            style: "width: 200px;",
+            placeholder: "Search by name"
           %>
-          <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+          <%= submit_tag "Search", name: "", class: "btn btn-dark-blue ml-2 align-self-start" %>
         <% end %>
       </div>
+    </div>
 
-      <style>
-        .team-card {
-          width: 14rem;
-          height: 18rem;
-          border: none;
-          border-radius: 15px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19);
-          transition: transform 0.3s;
-          overflow: hidden;
-        }
+    <style>
+      .form-control {
+        height: 48px;
+        font-size: 16px;
+        padding: 10px;
+        box-sizing: border-box;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-left: 10px;
+      }
 
-        .team-card:hover {
-          transform: scale(1.05);
-        }
+      .form-control::placeholder {
+        color: #1CAE82;
+      }
 
-        .team-logo-container {
-          width: 66.666%;
-          height: 70%;
-          margin: 1rem auto;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          overflow: hidden;
-        }
+      .btn-dark-blue {
+        color: #fff;
+        background-color: #001626;
+        border-color: #001626;
+        height: 48px;
+        line-height: 48px;
+        padding: 0 20px;
+        margin-left: 10px;
+      }
 
-        .team-logo-container img {
-          object-fit: contain;
-          width: 100%;
-          height: 100%;
-          border-radius: 15px;
-          max-width: calc(100% - 34px);
-          max-height: calc(100% - 34px);
-          margin-left: 15px;
-        }
+      .btn-dark-blue:hover {
+        color: #012B4D;
+        background-color: #ffc107;
+      }
 
-        .team-card-info {
-          padding: 10px;
-          text-align: center;
-        }
+      .btn-dark-blue:focus {
+        color: #fff;
+        background-color: #012B4D;
+        border-color: #012B4D;
+        box-shadow: 0 0 0 0.25rem rgba(0, 38, 77, 0.5);
+      }
 
-        .row {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-around;
-        }
+      .team-card {
+        width: 14rem;
+        height: 18rem;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19);
+        transition: transform 0.3s;
+        overflow: hidden;
+      }
 
-        .col-md-3 {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          margin-bottom: 2rem;
-        }
+      .team-card:hover {
+        transform: scale(1.05);
+      }
 
-        .team-name {
-          font-weight: bold;
-          margin-top: 10px;
-        }
+      .team-logo-container {
+        width: 66.666%;
+        height: 70%;
+        margin: 1rem auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+      }
 
-        .team-card:hover {
-  transform: scale(1.05);
-}
+      .team-logo-container img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        max-width: calc(100% - 34px);
+        max-height: calc(100% - 34px);
+        margin-left: 15px;
+      }
 
-.team-card:hover .team-logo-container img {
-  transform: scale(1.2);
-}
+      .team-card-info {
+        padding: 10px;
+        text-align: center;
+      }
 
-      </style>
+      .row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
 
-      <div class="container mt-5">
-        <div class="row">
-          <% @teams.each do |team| %>
-            <div class="col-md-3">
-              <div class="card mb-4 team-card">
-                <div class="team-logo-container">
-                  <%= link_to team_path(team) do %>
-                    <img src="<%= team.emblem %>" alt="<%= team.name %>">
-                  <% end %>
-                </div>
-                <div class="card-body team-card-info">
-                  <h5 class="team-name"><%= team.name %></h5>
-                  <p class="card-text">City: <%= team.city %></p>
-                </div>
+      .col-md-3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 2rem;
+      }
+
+      .team-name {
+        font-weight: bold;
+        margin-top: 10px;
+      }
+
+      .team-card:hover .team-logo-container img {
+        transform: scale(1.2);
+      }
+    </style>
+
+    <div class="container mt-5">
+      <div class="row">
+        <% @teams.each do |team| %>
+          <div class="col-md-3">
+            <div class="card mb-4 team-card">
+              <div class="team-logo-container">
+                <%= link_to team_path(team) do %>
+                  <img src="<%= team.emblem %>" alt="<%= team.name %>">
+                <% end %>
+              </div>
+              <div class="card-body team-card-info">
+                <h5 class="team-name"><%= team.name %></h5>
+                <p class="card-text">City: <%= team.city %></p>
               </div>
             </div>
-          <% end %>
-        </div>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
